# smart-publish-test

./: Cargo.toml  README.md
.github/workflows/: publish-add-one.yml  release-add-one-new-crate.yml  release-crate.yml  release-smart-add-one.yml  release-smart-adder.yml
add_one/: CHANGELOG.md  Cargo.toml  release.toml
add_one/src/: lib.rs
adder/: CHANGELOG.md  Cargo.toml  release.toml
adder/src/: main.rs
