[package]
description = "this is smart-add-one-new crate"
documentation = "https://github.com/apepkuss/smart-publish-test"
edition = "2021"
homepage = "https://github.com/apepkuss/smart-publish-test"
license = "MIT"
name = "smart-add-one-new"
repository = "https://github.com/apepkuss/smart-publish-test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
