[package]
description = "this is smart-adder crate"
documentation = "https://github.com/apepkuss/smart-publish-test"
edition = "2021"
homepage = "https://github.com/apepkuss/smart-publish-test"
license = "MIT"
name = "smart-adder"
repository = "https://github.com/apepkuss/smart-publish-test"
version = "0.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smart-add-one-new = {path = "../add_one", version = "^0.2.0" }
